--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
         <title>CHAVE DE OURO</title>
         <script type="text/javascript" src="database.js"></script>
         <script>
-            document.write(database_tercido[0])
+            document.write(database_tercido[0].desc)
         </script>
     </head>
 </html>
